# ansible-sage

./: .env.example  .gitignore  .pre-commit-config.yaml  .specify-constitution-template.md  CHANGELOG.md  CLAUDE.md  CLEANUP-SUMMARY.md  CONTRIBUTING.md  DOCKER-USAGE.md  Dockerfile  GITHUB-RELEASE-DESCRIPTION.md  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  RELEASE-STEPS.txt  RENAME-COMPLETE.md  SCOPE-CLARIFICATION.md  SPEC-KIT.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  reference.md  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test-event.json
.claude/: multi-task-chaining.md  prompt-analysis.md  prompt-improvements-summary.md  session-context.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml
ansible_maya/: __init__.py  cli.py
ansible_maya/api/: __init__.py  server.py
ansible_maya/api/routes/: events.py
ansible_maya/core/: __init__.py  ansible_context.py  exceptions.py  multi_agent_pipeline.py  prompt_templates.py  session_context.py
ansible_maya/core/providers/: __init__.py  base.py  claude.py  custom.py
ansible_maya/handlers/: orchestrator.py
ansible_maya/integrations/: git_publisher.py
ansible_maya/validation/: ansible_lint.py
examples/: README.md  api_usage.sh  basic_usage.py  multi-agent-example.md
sage/: __init__.py  cli.py
sage/api/: __init__.py  server.py
sage/api/routes/: events.py
sage/core/: __init__.py  ansible_context.py  exceptions.py  prompt_templates.py
sage/core/providers/: __init__.py  base.py  claude.py  custom.py
sage/handlers/: orchestrator.py
sage/integrations/: git_publisher.py
sage/validation/: ansible_lint.py
specs/example-openai-provider/: README.md  plan.md  spec.md  tasks.md
test-scripts/: 01-disk-full.sh  02-high-cpu.sh  03-service-down.sh  04-memory-leak.sh  05-package-update.sh  06-ssl-expiry.sh  07-database-slow.sh  08-backup-failure.sh  09-network-latency.sh  10-interactive-test.sh  README.md  run-all-tests.sh  test_enhanced_prompts.py  test_few_shot_examples.py  test_multi_task.py  test_session_context.py  test_temperature.py
tests/: conftest.py
tests/integration/: test_api_basic.py  test_docker_compose.py
tests/unit/core/: test_ansible_context.py
